# rustymines

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yaml
cli/: Cargo.toml  README.md
cli/src/: action.rs  args.rs  io.rs  main.rs
engine/: Cargo.toml  README.md
engine/src/: game.rs  lib.rs
engine/src/game/: action.rs  board.rs  outcome.rs  state.rs
engine/src/game/board/: error.rs  field.rs  move_result.rs  neighbors_iterator.rs
engine/src/game/board/field/: view.rs  visit_result.rs
src/: action.rs  board.rs  coordinate.rs  field.rs  game.rs  io.rs  main.rs  pop_set.rs
src/board/: field.rs
src/game/: action.rs  args.rs  board.rs  displayable.rs  io.rs  state.rs
src/game/board/: coordinate.rs  error.rs  field.rs  header.rs  move_result.rs  neighbors_iterator.rs
web/: Cargo.toml  README.md
web/src/: error.rs  game_state.rs  games_util.rs  garbage_collector.rs  main.rs  make_move.rs  new_game.rs  toggle_mode.rs  view.rs  web_ui.rs  wrapper.rs
web/src/make_move/: request.rs
web/src/new_game/: error.rs  request.rs
