[package]
name = "rustymines"
version = "1.1.17"
edition = "2021"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game with optional duds."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines"
keywords = [ "mine", "mines", "sweeper", "game", "console"]
categories = ["games"]
exclude = [".gitignore"]

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
grid2d = "0.3.8"
itertools = "0.11.0"
rand = "0.8.5"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
