[package]
name = "rustymines-cli"
version = "1.0.1"
edition = "2024"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game for the console."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines-cli"
keywords = ["mine", "mines", "sweeper", "game", "console"]
categories = ["games"]
exclude = [".gitignore"]

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rustymines = "2.0"

[lints]
workspace = true
