[package]
name = "rustymines"
version = "1.1.25"
edition = "2024"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game with optional duds."
license = "MIT"
readme = "../README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines"
keywords = ["mine", "mines", "sweeper", "game", "console"]
categories = ["games"]
exclude = [".gitignore"]

[dependencies]
bitflags = "2.9"
grid2d = "1"
rand = "0.9"

[lints]
workspace = true
