[package]
name = "rustymines"
version = "2.3.2"
edition = "2024"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game engine with optional duds."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines"
keywords = ["mine", "mines", "sweeper", "game"]
categories = ["games", "game-engines"]
exclude = [".gitignore"]

[dependencies]
bitflags = "2.9"
grid2d = "1.2"
rand = "0.9"

[lints]
workspace = true
