[package]
name = "rustymines-web"
version = "1.0.0"
edition = "2024"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game for the web."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines-web"
keywords = ["mine", "mines", "sweeper", "game", "web"]
categories = ["games"]
exclude = [".gitignore"]

[dependencies]
build_html = "2.6.0"
rocket = "0.5.1"
rustymines = { version = "2.2" }

[lints]
workspace = true
