[package]
name = "rustymines-web"
version = "1.2.0"
edition = "2024"
authors = ["Richard Neumann <mail@richard-neumann.de>"]
description = "A mine sweeping game for the web."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/conqp/rustymines/"
repository = "https://github.com/conqp/rustymines/"
documentation = "https://docs.rs/rustymines-web"
keywords = ["mine", "mines", "sweeper", "game", "web"]
categories = ["games"]
exclude = [".gitignore"]

[dependencies]
build_html = "2.6"
rocket = "0.5"
rustymines = { version = "2.6" }

[lints]
workspace = true
